--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-popover": "1.1.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.15.0",
     "react-collapsible": "^2.10.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
